test/sema/typeck/pattern/is-no-args-err-missing-params.dora
enum Foo { A(Int64), B }
fn isA(x: Foo): Bool {
    x is Foo::A
}
